@@ -7,6 +7,7 @@ lib/Dancer/Logger/LogReport.pm
 lib/Dancer2/Logger/LogReport.pm
 lib/Dancer2/Plugin/LogReport.pm
 lib/Dancer2/Plugin/LogReport/Message.pm
+lib/Dancer2/Template/TTLogReport.pm
 t/00use.t
 t/70dancer2.t
 xt/99pod.t
