@@ -2,23 +2,13 @@
 use warnings;
 use strict;
 
-use Test::More tests => 11;
+use Test::More;
 
 # The versions of the following packages are reported to help understanding
 # the environment in which the tests are run.  This is certainly not a
 # full list of all installed modules.
 my @show_versions =
- qw/
-    Log::Dispatch
-    Log::Log4perl
-    Mojolicious
-    Plack::Test
-    POSIX
-    PPI
-    String::Print
-    Sys::Syslog
-    Test::Pod
-	XML::LibXML
+ qw/Dancer2
    /;
 
 #   Log::Report::Optional
@@ -35,18 +25,10 @@ foreach my $package (sort @show_versions)
     warn "$package $report\n";
 }
 
-use_ok('Log::Report');
-use_ok('Log::Report::Die');
-use_ok('Log::Report::Dispatcher');
-use_ok('Log::Report::Dispatcher::File');
-use_ok('Log::Report::Dispatcher::Try');
-use_ok('Log::Report::Dispatcher::Perl');
-use_ok('Log::Report::Dispatcher::Callback');
-use_ok('Log::Report::Domain');
-use_ok('Log::Report::Exception');
-use_ok('Log::Report::Message');
-use_ok('Log::Report::Translator');
+use_ok('Dancer::Logger::LogReport');
+use_ok('Dancer2::Logger::LogReport');
+use_ok('Dancer2::Plugin::LogReport::Message');
+use_ok('Dancer2::Plugin::LogReport');
+use_ok('Dancer2::Template::TTLogReport');
 
-# Log::Report::Dispatcher::Syslog       requires optional Sys::Syslog
-# Log::Report::Dispatcher::LogDispatch  requires optional Log::Dispatch
-# Log::Report::Dispatcher::Log4perl     requires optional Log::Log4perl
+done_testing;
